--- a/main/templates/main/create_package.html
+++ b/main/templates/main/create_package.html
@@ -24,6 +24,10 @@
                                 {{ form.description }}
                             </div>
                             <div class="mb-3">
+                                <label for="{{ form.image.id_for_label }}" class="form-label">Package Image</label>
+                                {{ form.image }}
+                            </div>
+                            <div class="mb-3">
                                 <label for="{{ form.location.id_for_label }}" class="form-label">Location</label>
                                 {{ form.location }}
                             </div>
